--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <div class="projects" style="margin-top:14px;">
         <!-- Project A -->
         <article class="project card">
-          <img src="data:image/svg+xml;utf8,<?xml version='1.0' encoding='UTF-8'?><svg xmlns='http://www.w3.org/2000/svg' width='800' height='400'><rect width='100%' height='100%' fill='%23e6eef8'/><text x='50%' y='50%' dominant-baseline='middle' text-anchor='middle' fill='%23707caa' font-size='26'>Insurance Fraud — Placeholder Image</text></svg>" alt="Insurance Fraud">
+          <img src="C:\Users\Krishna kumar\OneDrive\Desktop\PF\Fraud-Detection.jpg" alt="Insurance Fraud">
           <div style="flex:1">
             <strong>Insurance Fraud Data Analysis</strong>
             <p class="muted" style="margin:6px 0">Analyzed claims, detected anomalies and visualized fraud hotspots. Built recommendations to improve claim verification.</p>
@@ -212,7 +212,7 @@
 
         <!-- Project B -->
         <article class="project card">
-          <img src="data:image/svg+xml;utf8,<?xml version='1.0' encoding='UTF-8'?><svg xmlns='http://www.w3.org/2000/svg' width='800' height='400'><rect width='100%' height='100%' fill='%23fff7ed'/><text x='50%' y='50%' dominant-baseline='middle' text-anchor='middle' fill='%23c4711c' font-size='26'>Hearing Well-being — Placeholder</text></svg>" alt="Hearing Survey">
+          <img src="C:\Users\Krishna kumar\OneDrive\Desktop\PF\Hearing-Loss-Symptoms.jpg" alt="Hearing Survey">
           <div style="flex:1">
             <strong>Hearing Well-Being Survey</strong>
             <p class="muted" style="margin:6px 0">Survey analysis across demographics with Power BI dashboards highlighting key influencing factors.</p>
@@ -224,7 +224,7 @@
 
         <!-- Project C -->
         <article class="project card">
-          <img src="data:image/svg+xml;utf8,<?xml version='1.0' encoding='UTF-8'?><svg xmlns='http://www.w3.org/2000/svg' width='800' height='400'><rect width='100%' height='100%' fill='%23eefcf3'/><text x='50%' y='50%' dominant-baseline='middle' text-anchor='middle' fill='%23665f3a' font-size='26'>2025 Startup Ecosystem — Placeholder</text></svg>" alt="Startup Ecosystem">
+          <img src="C:\Users\Krishna kumar\OneDrive\Desktop\PF\Startup-Ecosystem.jpg" alt="Startup Ecosystem">
           <div style="flex:1">
             <strong>2025 Startup Ecosystem Analysis</strong>
             <p class="muted" style="margin:6px 0">Trends in funding stages, sector performance and investor patterns. Interactive dashboards & recommendations for investors.</p>
