--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
         <!-- Project C -->
         <article class="project card">
-          <img src="C:\Users\Krishna kumar\OneDrive\Desktop\PF\Startup-Ecosystem.jpg" alt="Startup Ecosystem">
+          <img src="https://github.com/Ganesh-Ramadoss/Portfolio/blob/main/Startup-Ecosystem.jpg?raw=true" alt="Startup Ecosystem">
           <div style="flex:1">
             <strong>2025 Startup Ecosystem Analysis</strong>
             <p class="muted" style="margin:6px 0">Trends in funding stages, sector performance and investor patterns. Interactive dashboards & recommendations for investors.</p>
@@ -365,3 +365,4 @@
   </script>
 </body>
 </html>
+
