--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <div class="projects" style="margin-top:14px;">
         <!-- Project A -->
         <article class="project card">
-          <img src="C:\Users\Krishna kumar\OneDrive\Desktop\PF\Fraud-Detection.jpg" alt="Insurance Fraud">
+          <img src="https://github.com/Ganesh-Ramadoss/Portfolio/blob/main/Fraud-Detection.jpg?raw=true" alt="Insurance Fraud">
           <div style="flex:1">
             <strong>Insurance Fraud Data Analysis</strong>
             <p class="muted" style="margin:6px 0">Analyzed claims, detected anomalies and visualized fraud hotspots. Built recommendations to improve claim verification.</p>
@@ -365,4 +365,5 @@
   </script>
 </body>
 </html>
+
 
