--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
         <!-- Project B -->
         <article class="project card">
-          <img src="C:\Users\Krishna kumar\OneDrive\Desktop\PF\Hearing-Loss-Symptoms.jpg" alt="Hearing Survey">
+          <img src="https://github.com/Ganesh-Ramadoss/Portfolio/blob/main/Hearing-Loss-Symptoms.jpg?raw=true" alt="Hearing Survey">
           <div style="flex:1">
             <strong>Hearing Well-Being Survey</strong>
             <p class="muted" style="margin:6px 0">Survey analysis across demographics with Power BI dashboards highlighting key influencing factors.</p>
@@ -365,5 +365,6 @@
   </script>
 </body>
 </html>
+
 
 
