sales alt updated

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
       <div class="projects" style="margin-top:14px;">
         <!-- Project A1 -->
         <article class="project card">
-          <img src="https://raw.githubusercontent.com/Ganesh-Ramadoss/Portfolio/d057dd591952f9dc244f65493647f2eca142698d/Sales.png" alt="Insurance Fraud">
+          <img src="https://raw.githubusercontent.com/Ganesh-Ramadoss/Portfolio/d057dd591952f9dc244f65493647f2eca142698d/Sales.png" alt="Sales Dashboard">
           <div style="flex:1">
             <strong>Sales Dashboard</strong>
             <p class="muted" style="margin:6px 0">Designed a Power BI Sales Dashboard to monitor key metrics such as revenue, profit, and growth trends.
@@ -385,4 +385,5 @@
   </script>
 </body>
 </html>
+
 
