projects images updated

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <div class="projects" style="margin-top:14px;">
         <!-- Project A -->
         <article class="project card">
-          <img src="C:\Users\Krishna kumar\OneDrive\Desktop\Portfolio\Images\Fraud-Detection.jpg" alt="Insurance Fraud">
+          <img src="https://github.com/Ganesh-Ramadoss/Portfolio/blob/main/Fraud-Detection.jpg?raw=true" alt="Insurance Fraud">
           <div style="flex:1">
             <strong>Insurance Fraud Data Analysis</strong>
             <p class="muted" style="margin:6px 0">Analyzed claims, detected anomalies and visualized fraud hotspots. Built recommendations to improve claim verification.</p>
@@ -214,7 +214,7 @@
 
         <!-- Project B -->
         <article class="project card">
-          <img src="C:\Users\Krishna kumar\OneDrive\Desktop\Portfolio\Images\Hearing-Loss-Symptoms.jpg" alt="Hearing Survey">
+          <img src="https://github.com/Ganesh-Ramadoss/Portfolio/blob/main/Hearing-Loss-Symptoms.jpg?raw=true" alt="Hearing Survey">
           <div style="flex:1">
             <strong>Hearing Well-Being Survey</strong>
             <p class="muted" style="margin:6px 0">Survey analysis across demographics with Power BI dashboards highlighting key influencing factors.</p>
@@ -227,7 +227,7 @@
       
         <!-- Project C -->
         <article class="project card">
-          <img src="C:\Users\Krishna kumar\OneDrive\Desktop\Portfolio\Images\Startup-Ecosystem.jpg" alt="Startup Ecosystem">
+          <img src="https://github.com/Ganesh-Ramadoss/Portfolio/blob/main/Startup-Ecosystem.jpg?raw=true" alt="Startup Ecosystem">
           <div style="flex:1">
             <strong>2025 Startup Ecosystem Analysis</strong>
             <p class="muted" style="margin:6px 0">Trends in funding stages, sector performance and investor patterns. Interactive dashboards & recommendations for investors.</p>
@@ -385,5 +385,6 @@
   </script>
 </body>
 </html>
+
 
 
