--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <a href="#education" class="nav-link">Education</a>
       <a href="#contact" class="nav-link">Contact</a>
       <a id="themeToggle" style="margin-left:14px; cursor:pointer;" title="Toggle dark mode">🌓</a>
-      <a class="btn" href="C:\Users\Krishna kumar\OneDrive\Desktop\Portfolio\Resume\Ganesh_Ramadoss.pdf" download style="margin-left:12px;">⬇️ Download Resume</a>
+      <a class="btn" href="./Ganesh_Ramadoss.pdf" download style="margin-left:12px;">⬇️ Download Resume</a>
     </nav>
   </header>
 
@@ -385,6 +385,7 @@
   </script>
 </body>
 </html>
+
 
 
 
