power bi project upload

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <strong>Sales Dashboard</strong>
             <p class="muted" style="margin:6px 0">Designed a Power BI Sales Dashboard to monitor key metrics such as revenue, profit, and growth trends.
                   Transformed raw sales data into meaningful insights using DAX, KPIs, and interactive visuals.</p>                 
-            <a class="btn" href="https://github.com/Ganesh-Ramadoss/Portfolio/blob/main/Sales%20Dashboard.pbit">View Projects</a>
+            <a class="btn" href="Sales Dashboard.pbit">View Projects</a>
           </div>
         </article>
         </div>
@@ -385,6 +385,7 @@
   </script>
 </body>
 </html>
+
 
 
 
