view & contact me comment out

--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
         <h2 class="title">Welcome</h2>
         <p class="subtitle">Enthusiastic software developer & aspiring Data Analyst focused on data cleaning, visualization, and exploratory analysis using Python, SQL, Power BI and Excel.</p>
 
-        <div class="row" style="margin-top:10px">
+        <!-- <div class="row" style="margin-top:10px">
           <a class="btn" href="#projects">View Projects</a>
           <a class="btn" style="background:#111827" href="#contact">Contact Me</a>
-        </div>
+        </div> -->
 
         <div style="margin-top:18px" class="card">
           <strong>Current:</strong> Data Analyst Intern — Freshskills (May 2025 – Present)
@@ -385,6 +385,7 @@
   </script>
 </body>
 </html>
+
 
 
 
