add experience tag

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
         </div> -->
 
         <div style="margin-top:18px" class="card">
+          <h3>Experierce</h3>
           <strong>Current:</strong> Data Analyst Intern — Freshskills (May 2025 – Present)
           <p class="muted" style="margin-top:6px">
             Worked on Insurance Fraud analysis, Hearing Well-Being survey, and 2025 startup ecosystem analysis. Built dashboards, EDA and delivered actionable insights.
@@ -385,6 +386,7 @@
   </script>
 </body>
 </html>
+
 
 
 
