welcome changed to about me

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <!-- HERO -->
     <section id="about" class="hero card">
       <div class="left">
-        <h2 class="title">Welcome</h2>
+        <h2 class="title">About Me</h2>
         <p class="subtitle">Enthusiastic software developer & aspiring Data Analyst focused on data cleaning, visualization, and exploratory analysis using Python, SQL, Power BI and Excel.</p>
 
         <!-- <div class="row" style="margin-top:10px">
@@ -386,6 +386,7 @@
   </script>
 </body>
 </html>
+
 
 
 
